Changed image array path in js, cleaned up html and css files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- fullscreen image carousel on hover -->
   <div class="image-carousel">
-    <img src="" alt="" class="image-array">
+    <img src="" alt="portfolio" class="image-array">
   </div>
 
   <div class="fullscreen-landing">
@@ -24,7 +24,11 @@
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
     <h2>About. Work. Contact.</h2>
   </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
+
+
 </body>
 
 </html>
