--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 
 <body>
 
+
+
+  <!-- menu popup -->
+  <div class="menu-popup">
+    <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit">
+    <div class="menu-popup-content">
+      <a href="#">Verizon</a>
+      <a href="#">Huge</a>
+      <a href="#">T-Mobile</a>
+      <a href="#">MSG Networks</a>
+      <a href="#">Pfizer</a>
+      <a href="#">Tidal</a>
+    </div>
+  </div>
+
   <!-- fullscreen image carousel on hover -->
   <div class="image-carousel">
     <img src="" alt="portfolio" class="image-array">
