cleaned code and added comments

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 <body>
 
-
-
   <!-- menu popup -->
   <div class="menu-popup">
     <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit">
@@ -31,6 +29,7 @@
     <img src="" alt="portfolio" class="image-array">
   </div>
 
+  <!-- main landing content -->
   <div class="fullscreen-landing">
     <h1>Darren is a Emmy Award Winning Visual Designer who loves visual experiences. </h1>
     <p>Prior to taking on my role at Twitter in May 2018, I most recently served as of Head of Product and Design at
@@ -39,6 +38,8 @@
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
     <h2>About. Work. Contact.</h2>
   </div>
+
+  <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
