Sections and style updates to case study page

--- a/case-study.html
+++ b/case-study.html
@@ -20,6 +20,38 @@
     </div>
   </header>
 
+  <section>
+    <div class="visual-designer">
+      <h3>Visual Designer, Huge </h3>
+      <p>We’ve completely overhauled MSG Network’s digital strategy and made the website a year-round destination for a
+        new breed of sophisticated sports fans. Once perceived as a blue-collar regional network, MSG needed to
+        transform
+        their digital strategy to match its recent demographic shift. Striving to become New York’s preeminent sports
+        destination, MSG Networks is now the reflection of it’s new class of tech-savvy professionals.</p>
+
+      <img src="img/iphone-placeholder.png" alt="">
+    </div>
+  </section>
+
+  <!-- two people section -->
+  <section class="two-people">
+    <img src="img/person-section-placeholder.jpg" alt="">
+  </section>
+
+  <!-- nba section -->
+  <section class="nba">
+    <img src="img/nba-placeholder.png" alt="">
+  </section>
+
+  <!-- footer -->
+  <footer>
+    <div class="footer-content">
+      <a href="#" class="related">Related</a>
+      <a href="#">MSG Networks</a>
+      <a href="#">Tidal</a>
+      <a href="#">Huge</a>
+    </div>
+  </footer>
 </body>
 
 </html>
