Changed h2 to individual span tags to fire different events based on span

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
       GQ. I've also worked at Vevo, Condé Nast Entertainment as well as several design agencies including Huge and
       Draft FCB. I also co-founded Scratch, an independent design studio, in 2006. View my LinkedIn profile to learn
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
-    <h2>About. Work. Contact.</h2>
+    <!-- <h2>About. Work. Contact.</h2> -->
+    <div>
+      <span>About.</span>
+      <span>Work.</span>
+      <span>Contact.</span>
+    </div>
   </div>
 
   <!-- scripts -->
