Added link to about page on About span element

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
     <!-- <h2>About. Work. Contact.</h2> -->
     <div>
-      <span>About.</span>
+      <span><a href="about.html">About.</a></span>
       <span>Work.</span>
       <span>Contact.</span>
     </div>
