Added popup nav menu and emoji to open menus

--- a/case-study.html
+++ b/case-study.html
@@ -10,6 +10,21 @@
 </head>
 
 <body class="case-study">
+  <!-- emoji menu  -->
+  <img src="img/gesture-emoji.png" class="gesture-emoji emoji-open" alt="Exit">
+
+  <!-- menu popup -->
+  <div class="menu-popup">
+    <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit">
+    <div class="menu-popup-content">
+      <a href="#">Verizon</a>
+      <a href="#">Huge</a>
+      <a href="#">T-Mobile</a>
+      <a href="#">MSG Networks</a>
+      <a href="#">Pfizer</a>
+      <a href="#">Tidal</a>
+    </div>
+  </div>
 
   <header>
     <div class="header-content-wrapper">
@@ -52,6 +67,11 @@
       <a href="#">Huge</a>
     </div>
   </footer>
+
+  <!-- js -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
