Linked to case study page on the Tidal menu item

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#">T-Mobile</a>
       <a href="#">MSG Networks</a>
       <a href="#">Pfizer</a>
-      <a href="#">Tidal</a>
+      <a href="case-study.html">Tidal</a>
     </div>
   </div>
 
