Added test div for normal image carousel with css animation and hover animation

--- a/case-study.html
+++ b/case-study.html
@@ -53,6 +53,19 @@
     <img src="img/person-section-placeholder.jpg" alt="">
   </section>
 
+  <!-- carousel testing -->
+  <div class="carousel">
+    <span class="carousel-control-left"></span>
+    <span class=carousel-control-right></span>
+    <div class="carousel-content">
+      <img src="img/img-1.jpeg" alt="">
+      <img src="img/img-2.jpeg" alt="">
+      <img src="img/img-3.jpeg" alt="">
+      <img src="img/img-1.jpeg" alt="">
+    </div>
+
+  </div>
+
   <!-- nba section -->
   <section class="nba">
     <img src="img/nba-placeholder.png" alt="">
