Added last pic in first slot to fix beginning hover animation

--- a/case-study.html
+++ b/case-study.html
@@ -58,6 +58,7 @@
     <span class="carousel-control-left"></span>
     <span class=carousel-control-right></span>
     <div class="carousel-content">
+      <img src="img/img-3.jpeg" alt="">
       <img src="img/img-1.jpeg" alt="">
       <img src="img/img-2.jpeg" alt="">
       <img src="img/img-3.jpeg" alt="">
