Updated style for image carousel

--- a/case-study.html
+++ b/case-study.html
@@ -1,91 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Upwork 10</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Upwork 10</title>
-</head>
+  <body class="case-study">
+    <!-- emoji menu  -->
+    <img
+      src="img/gesture-emoji.png"
+      class="gesture-emoji emoji-open"
+      alt="Exit"
+    />
 
-<body class="case-study">
-  <!-- emoji menu  -->
-  <img src="img/gesture-emoji.png" class="gesture-emoji emoji-open" alt="Exit">
-
-  <!-- menu popup -->
-  <div class="menu-popup">
-    <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit">
-    <div class="menu-popup-content">
-      <a href="#">Verizon</a>
-      <a href="#">Huge</a>
-      <a href="#">T-Mobile</a>
-      <a href="#">MSG Networks</a>
-      <a href="#">Pfizer</a>
-      <a href="#">Tidal</a>
-    </div>
-  </div>
-
-  <header>
-    <div class="header-content-wrapper">
-      <div class="header-content">
-        <h2>TIDAL</h2>
-        <h1>Exclusive Streaming For Brooklyn.</h1>
+    <!-- menu popup -->
+    <div class="menu-popup">
+      <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit" />
+      <div class="menu-popup-content">
+        <a href="#">Verizon</a>
+        <a href="#">Huge</a>
+        <a href="#">T-Mobile</a>
+        <a href="#">MSG Networks</a>
+        <a href="#">Pfizer</a>
+        <a href="#">Tidal</a>
       </div>
     </div>
-  </header>
 
-  <section>
-    <div class="visual-designer">
-      <h3>Visual Designer, Huge </h3>
-      <p>We’ve completely overhauled MSG Network’s digital strategy and made the website a year-round destination for a
-        new breed of sophisticated sports fans. Once perceived as a blue-collar regional network, MSG needed to
-        transform
-        their digital strategy to match its recent demographic shift. Striving to become New York’s preeminent sports
-        destination, MSG Networks is now the reflection of it’s new class of tech-savvy professionals.</p>
+    <header>
+      <div class="header-content-wrapper">
+        <div class="header-content">
+          <h2>TIDAL</h2>
+          <h1>Exclusive Streaming For Brooklyn.</h1>
+        </div>
+      </div>
+    </header>
 
-      <img src="img/iphone-placeholder.png" alt="">
+    <section>
+      <div class="visual-designer">
+        <h3>Visual Designer, Huge</h3>
+        <p>
+          We’ve completely overhauled MSG Network’s digital strategy and made
+          the website a year-round destination for a new breed of sophisticated
+          sports fans. Once perceived as a blue-collar regional network, MSG
+          needed to transform their digital strategy to match its recent
+          demographic shift. Striving to become New York’s preeminent sports
+          destination, MSG Networks is now the reflection of it’s new class of
+          tech-savvy professionals.
+        </p>
+
+        <img src="img/iphone-placeholder.png" alt="" />
+      </div>
+    </section>
+
+    <!-- two people section -->
+    <section class="two-people">
+      <img src="img/person-section-placeholder.jpg" alt="" />
+    </section>
+
+    <!-- carousel testing -->
+    <div class="carousel">
+      <span class="carousel-control-left"></span>
+      <span class="carousel-control-right"></span>
+      <div class="carousel-content">
+        <!-- add  extra last pic first and  extra first pic last for hover effect to work properly  -->
+        <img src="img/img-4.jpeg" alt="" />
+        <img src="img/img-1.jpeg" alt="" />
+        <img src="img/img-2.jpeg" alt="" />
+        <img src="img/img-3.jpeg" alt="" />
+        <img src="img/img-4.jpeg" alt="" />
+        <img src="img/img-1.jpeg" alt="" />
+      </div>
     </div>
-  </section>
 
-  <!-- two people section -->
-  <section class="two-people">
-    <img src="img/person-section-placeholder.jpg" alt="">
-  </section>
+    <!-- nba section -->
+    <section class="nba">
+      <img src="img/nba-placeholder.png" alt="" />
+    </section>
 
-  <!-- carousel testing -->
-  <div class="carousel">
-    <span class="carousel-control-left"></span>
-    <span class=carousel-control-right></span>
-    <div class="carousel-content">
-      <img src="img/img-3.jpeg" alt="">
-      <img src="img/img-1.jpeg" alt="">
-      <img src="img/img-2.jpeg" alt="">
-      <img src="img/img-3.jpeg" alt="">
-      <img src="img/img-1.jpeg" alt="">
-    </div>
+    <!-- footer -->
+    <footer>
+      <div class="footer-content">
+        <a href="#" class="related">Related</a>
+        <a href="#">MSG Networks</a>
+        <a href="#">Tidal</a>
+        <a href="#">Huge</a>
+      </div>
+    </footer>
 
-  </div>
-
-  <!-- nba section -->
-  <section class="nba">
-    <img src="img/nba-placeholder.png" alt="">
-  </section>
-
-  <!-- footer -->
-  <footer>
-    <div class="footer-content">
-      <a href="#" class="related">Related</a>
-      <a href="#">MSG Networks</a>
-      <a href="#">Tidal</a>
-      <a href="#">Huge</a>
-    </div>
-  </footer>
-
-  <!-- js -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
-</body>
-
+    <!-- js -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
