updated single img class to make more dynamic

--- a/case-study.html
+++ b/case-study.html
@@ -53,7 +53,7 @@
   </section>
 
   <!-- two people section -->
-  <section class="two-people">
+  <section class="single-image">
     <img src="img/person-section-placeholder.jpg" alt="" />
   </section>
 
