--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <a href="#">T-Mobile</a>
       <a href="#">MSG Networks</a>
       <a href="#">Pfizer</a>
-      <a href="#">Tidal</a>
+      <a href="case-study.html">Tidal</a>
     </div>
   </div>
 
