Added hover carousel to footer as a test, added dynamic classes on img elements

--- a/case-study.html
+++ b/case-study.html
@@ -48,20 +48,20 @@
         tech-savvy professionals.
       </p>
 
-      <img src="img/iphone-placeholder.png" alt="" />
+      <img src="img/iphone-placeholder.png" class="full-height" alt="" />
     </div>
   </section>
 
   <!-- two people section -->
   <section class="single-image">
-    <img src="img/person-section-placeholder.jpg" alt="" />
+    <img src="img/person-section-placeholder.jpg" class="full-height full-width" alt="" />
   </section>
 
   <!-- carousel testing -->
   <div class="carousel">
     <span class="carousel-control-left"></span>
     <span class="carousel-control-right"></span>
-    <div class="carousel-content">
+    <div class="carousel-content" id="cool-id">
       <!-- add extra last pic first and extra first pic last for hover effect to work properly  -->
       <img src="img/img-5.jpeg" alt="" />
       <img src="img/img-1.jpeg" alt="" />
@@ -75,16 +75,25 @@
 
   <!-- nba section -->
   <section class="nba">
-    <img src="img/nba-placeholder.png" alt="" />
+    <img src="img/nba-placeholder.png" class="full-height" alt="nba" />
   </section>
+
+
 
   <!-- footer -->
   <footer>
-    <div class="footer-content">
+    <div class="footer-content hover-carousel">
       <a href="#" class="related">Related</a>
-      <a href="#">MSG Networks</a>
-      <a href="#">Tidal</a>
-      <a href="#">Huge</a>
+
+      <span><a href="#">MSG Networks</a></span>
+      <span><a href="#">Tidal</a></span>
+      <span><a href="#">Huge</a></span>
+
+    </div>
+
+    <!-- fullscreen image carousel on hover -->
+    <div class="image-carousel-hover">
+      <img src="img/img-3.jpeg" alt="portfolio" class="image-array">
     </div>
   </footer>
 
