changed hover carousel classes to be more dynamic

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- fullscreen image carousel on hover -->
-  <div class="image-carousel">
+  <div class="image-carousel-hover">
     <img src="" alt="portfolio" class="image-array">
   </div>
 
@@ -36,8 +36,7 @@
       GQ. I've also worked at Vevo, Condé Nast Entertainment as well as several design agencies including Huge and
       Draft FCB. I also co-founded Scratch, an independent design studio, in 2006. View my LinkedIn profile to learn
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
-    <!-- <h2>About. Work. Contact.</h2> -->
-    <div>
+    <div class="hover-carousel">
       <span><a href="about.html">About.</a></span>
       <span>Work.</span>
       <span>Contact.</span>
