Added hover carousel divs with content for testing

--- a/case-study.html
+++ b/case-study.html
@@ -78,22 +78,27 @@
     <img src="img/nba-placeholder.png" class="full-height" alt="nba" />
   </section>
 
+  <!-- HOVER CAROUSEL -->
+  <div class="hover-carousel-content">
+    <div class="first-hover">
+      <video src="video/placeholder-vid.mp4"></video>
+      <video src="video/placeholder-vid-2.mp4"></video>
+    </div>
+    <div class="second-hover">
+      <img src="img/img-1.jpeg">
+      <img src="img/img-2.jpeg">
+      <img src="img/img-3.jpeg">
+    </div>
+  </div>
 
 
   <!-- footer -->
   <footer>
     <div class="footer-content hover-carousel">
       <a href="#" class="related">Related</a>
-
       <span><a href="#">MSG Networks</a></span>
       <span><a href="#">Tidal</a></span>
       <span><a href="#">Huge</a></span>
-
-    </div>
-
-    <!-- fullscreen image carousel on hover -->
-    <div class="image-carousel-hover">
-      <img src="img/img-3.jpeg" alt="portfolio" class="image-array">
     </div>
   </footer>
 
