--- a/about.html
+++ b/about.html
@@ -100,13 +100,26 @@
     </div>
   </section>
 
+  <!-- HOVER CAROUSEL -->
+  <div class="hover-carousel-content">
+    <div class="first-hover">
+      <video src="video/placeholder-vid.mp4"></video>
+      <video src="video/placeholder-vid-2.mp4"></video>
+    </div>
+    <div class="second-hover">
+      <img src="img/img-1.jpeg">
+      <img src="img/img-2.jpeg">
+      <img src="img/img-3.jpeg">
+    </div>
+  </div>
+
   <!-- footer -->
   <footer>
-    <div class="footer-content">
+    <div class="footer-content hover-carousel">
       <a href="#">Related</a>
-      <a href="#">Resume</a>
-      <a href="#">email</a>
-      <a href="#">work</a>
+      <span><a href="#">Resume</a></span>
+      <span><a href="#">email</a></span>
+      <span><a href="#">work</a></span>
     </div>
   </footer>
 
