--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
     </div>
   </div>
 
-  <!-- fullscreen image carousel on hover -->
-  <div class="image-carousel-hover">
-    <img src="" alt="portfolio" class="image-array">
+  <!-- HOVER CAROUSEL -->
+  <div class="hover-carousel-content">
+    <div class="first-hover">
+      <video src="video/placeholder-vid.mp4"></video>
+      <video src="video/placeholder-vid-2.mp4"></video>
+    </div>
+    <div class="second-hover">
+      <img src="img/img-1.jpeg">
+      <img src="img/img-2.jpeg">
+      <img src="img/img-3.jpeg">
+    </div>
   </div>
+
 
   <!-- main landing content -->
   <div class="fullscreen-landing">
