updated test divs for testing data attributes

--- a/case-study.html
+++ b/case-study.html
@@ -17,13 +17,29 @@
   <div class="menu-popup">
     <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit" />
     <div class="menu-popup-content">
-      <a href="#">Verizon</a>
-      <a href="#">Huge</a>
-      <a href="#">T-Mobile</a>
+      <a href="#" data-nav="1">Verizon</a>
+      <a href="#" data-nav="2">Huge</a>
+      <a href="#" data-nav="3">T-Mobile</a>
       <a href="#">MSG Networks</a>
       <a href="#">Pfizer</a>
       <a href="#">Tidal</a>
     </div>
+  </div>
+
+  <div class="test" data-nav="1">
+    <img src="img/img-2.jpeg" alt="">
+    <img src="img/img-3.jpeg" alt="">
+  </div>
+
+  <div class="test" data-nav="2">
+    <img src="img/img-4.jpeg" alt="">
+    <img src="img/img-5.jpeg" alt="">
+  </div>
+
+  <div class="test" data-nav="3">
+    <img src="img/img-2.jpeg" alt="">
+    <img src="img/img-3.jpeg" alt="">
+    <img src="img/img-4.jpeg" alt="">
   </div>
 
   <header>
@@ -90,7 +106,6 @@
       <img src="img/img-3.jpeg">
     </div>
   </div>
-
 
   <!-- footer -->
   <footer>
