added new hover carousel with data attributes

--- a/case-study.html
+++ b/case-study.html
@@ -94,16 +94,25 @@
     <img src="img/nba-placeholder.png" class="full-height" alt="nba" />
   </section>
 
-  <!-- HOVER CAROUSEL -->
+  <!--  NEW HOVER CAROUSEL -->
   <div class="hover-carousel-content">
-    <div class="first-hover">
-      <video src="video/placeholder-vid.mp4"></video>
-      <video src="video/placeholder-vid-2.mp4"></video>
+    <div class="test" data-hover="1">
+      <video src="video/placeholder-vid.mp4" autoplay muted loop></video>
+      <video src="video/placeholder-vid-2.mp4" autoplay muted loop></video>
     </div>
-    <div class="second-hover">
-      <img src="img/img-1.jpeg">
-      <img src="img/img-2.jpeg">
-      <img src="img/img-3.jpeg">
+
+    <div class="test" data-hover="2">
+      <img src="img/img-4.jpeg" alt="">
+      <img src="img/img-5.jpeg" alt="">
+    </div>
+
+    <div class="test" data-hover="3">
+      <img src="img/img-2.jpeg" alt="">
+      <img src="img/img-3.jpeg" alt="">
+      <img src="img/img-4.jpeg" alt="">
+    </div>
+    <div class="hover-carousel-content-video">
+      <video src="" autoplay loop muted></video>
     </div>
   </div>
 
@@ -111,9 +120,9 @@
   <footer>
     <div class="footer-content hover-carousel">
       <a href="#" class="related">Related</a>
-      <span><a href="#">MSG Networks</a></span>
-      <span><a href="#">Tidal</a></span>
-      <span><a href="#">Huge</a></span>
+      <span data-hover="1" data-speed="3000"><a href="#">MSG Networks</a></span>
+      <span data-hover="2" data-speed="1000"><a href="#">Tidal</a></span>
+      <span data-hover="3" data-speed="1000"><a href="#">Huge</a></span>
     </div>
   </footer>
 
