--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
       <a href="case-study.html">Tidal</a>
     </div>
   </div>
-  <!-- 
+
   <div class="test" data-nav="1">
     <img src="img/img-2.jpeg" alt="">
     <img src="img/img-3.jpeg" alt="">
-    <video src="video/placeholder-vid.mp4" loop autoplay muted></video>
   </div>
 
   <div class="test" data-nav="2">
@@ -39,27 +38,13 @@
     <img src="img/img-2.jpeg" alt="">
     <img src="img/img-3.jpeg" alt="">
     <img src="img/img-4.jpeg" alt="">
-  </div> -->
-
-  <!-- HOVER CAROUSEL -->
-  <!-- <div class="hover-carousel-content">
-    <div class="first-hover">
-      <video src="video/placeholder-vid.mp4"></video>
-      <video src="video/placeholder-vid-2.mp4"></video>
-    </div>
-    <div class="second-hover">
-      <img src="img/img-1.jpeg">
-      <img src="img/img-2.jpeg">
-      <img src="img/img-3.jpeg">
-    </div>
-
-  </div> -->
+  </div>
 
   <!--  NEW HOVER CAROUSEL -->
   <div class="hover-carousel-content">
     <div class="test" data-hover="1">
       <video src="video/placeholder-vid.mp4" autoplay muted loop></video>
-      <video src="video/placeholder-vid.mp4" autoplay muted loop></video>
+      <video src="video/placeholder-vid-2.mp4" autoplay muted loop></video>
     </div>
 
     <div class="test" data-hover="2">
@@ -72,8 +57,8 @@
       <img src="img/img-3.jpeg" alt="">
       <img src="img/img-4.jpeg" alt="">
     </div>
-    <div class="hover-carousel-content-container">
-
+    <div class="hover-carousel-content-video">
+      <video src="" autoplay loop muted></video>
     </div>
   </div>
 
@@ -86,9 +71,9 @@
       Draft FCB. I also co-founded Scratch, an independent design studio, in 2006. View my LinkedIn profile to learn
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
     <div class="hover-carousel">
-      <span data-hover="1"><a href="about.html">About.</a></span>
-      <span data-hover="2">Work.</span>
-      <span data-hover="3">Contact.</span>
+      <span data-hover="1" data-speed="3000"><a href="about.html">About.</a></span>
+      <span data-hover="2" data-speed="1000">Work.</span>
+      <span data-hover="3" data-speed="1000">Contact.</span>
     </div>
   </div>
 
