--- a/about.html
+++ b/about.html
@@ -100,16 +100,25 @@
     </div>
   </section>
 
-  <!-- HOVER CAROUSEL -->
+  <!--  NEW HOVER CAROUSEL -->
   <div class="hover-carousel-content">
-    <div class="first-hover">
-      <video src="video/placeholder-vid.mp4"></video>
-      <video src="video/placeholder-vid-2.mp4"></video>
+    <div class="test" data-hover="1">
+      <video src="video/placeholder-vid.mp4" autoplay muted loop></video>
+      <video src="video/placeholder-vid-2.mp4" autoplay muted loop></video>
     </div>
-    <div class="second-hover">
-      <img src="img/img-1.jpeg">
-      <img src="img/img-2.jpeg">
-      <img src="img/img-3.jpeg">
+
+    <div class="test" data-hover="2">
+      <img src="img/img-4.jpeg" alt="">
+      <img src="img/img-5.jpeg" alt="">
+    </div>
+
+    <div class="test" data-hover="3">
+      <img src="img/img-2.jpeg" alt="">
+      <img src="img/img-3.jpeg" alt="">
+      <img src="img/img-4.jpeg" alt="">
+    </div>
+    <div class="hover-carousel-content-video">
+      <video src="" autoplay loop muted></video>
     </div>
   </div>
 
@@ -117,9 +126,9 @@
   <footer>
     <div class="footer-content hover-carousel">
       <a href="#">Related</a>
-      <span><a href="#">Resume</a></span>
-      <span><a href="#">email</a></span>
-      <span><a href="#">work</a></span>
+      <span data-hover="1" data-speed="3000"><a href="#">Resume</a></span>
+      <span data-hover="2" data-speed="1000"><a href="#">email</a></span>
+      <span data-hover="3" data-speed="1000"><a href="#">work</a></span>
     </div>
   </footer>
 
