cleaned up code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
   </div>
 
+  <!-- nav hover -->
   <div class="test" data-nav="1">
     <img src="img/img-2.jpeg" alt="">
     <img src="img/img-3.jpeg" alt="">
@@ -62,7 +63,6 @@
     </div>
   </div>
 
-
   <!-- main landing content -->
   <div class="fullscreen-landing">
     <h1>Darren is a Emmy Award Winning Visual Designer who loves visual experiences. </h1>
@@ -71,7 +71,9 @@
       Draft FCB. I also co-founded Scratch, an independent design studio, in 2006. View my LinkedIn profile to learn
       more. Scroll on to see my work and follow me on Twitter for some random thoughts.</p>
     <div class="hover-carousel">
-      <span data-hover="1" data-speed="3000"><a href="about.html">About.</a></span>
+      <span data-hover="1" data-speed="3000">
+        <a href="about.html">About.</a>
+      </span>
       <span data-hover="2" data-speed="1000">Work.</span>
       <span data-hover="3" data-speed="1000">Contact.</span>
     </div>
@@ -81,7 +83,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
-
 
 </body>
 
