--- a/about.html
+++ b/about.html
@@ -15,17 +15,37 @@
 
   <!-- menu popup -->
   <div class="menu-popup">
-    <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit">
+    <img src="img/gesture-emoji.png" class="gesture-emoji" alt="Exit" />
     <div class="menu-popup-content">
-      <a href="#">Verizon</a>
-      <a href="#">Huge</a>
-      <a href="#">T-Mobile</a>
+      <a href="#" data-nav="1">Verizon</a>
+      <a href="#" data-nav="2">Huge</a>
+      <a href="#" data-nav="3">T-Mobile</a>
       <a href="#">MSG Networks</a>
       <a href="#">Pfizer</a>
       <a href="case-study.html">Tidal</a>
     </div>
   </div>
 
+  <!-- nav hover -->
+  <div class="test" data-nav="1">
+    <img src="img/img-2.jpeg" alt="">
+    <img src="img/img-3.jpeg" alt="">
+    <img src="img/img-5.jpeg" alt="">
+    <img src="img/img-4.jpeg" alt="">
+    <img src="img/img-11.jpeg" alt="">
+  </div>
+
+  <div class="test" data-nav="2">
+    <img src="img/img-4.jpeg" alt="">
+    <img src="img/img-5.jpeg" alt="">
+    <img src="img/img-6.jpeg" alt="">
+  </div>
+
+  <div class="test" data-nav="3">
+    <img src="img/img-2.jpeg" alt="">
+    <img src="img/img-3.jpeg" alt="">
+    <img src="img/img-4.jpeg" alt="">
+  </div>
   <!-- main landing with pic -->
   <header>
     <img src="img/about-header-placeholder.png" alt="about">
