added test images for hover carousel

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <div class="test" data-nav="1">
     <img src="img/img-2.jpeg" alt="">
     <img src="img/img-3.jpeg" alt="">
+    <img src="img/img-8.jpeg" alt="">
+    <img src="img/img-5.jpeg" alt="">
   </div>
 
   <div class="test" data-nav="2">
@@ -51,6 +53,8 @@
     <div class="test" data-hover="2">
       <img src="img/img-4.jpeg" alt="">
       <img src="img/img-5.jpeg" alt="">
+      <img src="img/img-8.jpeg" alt="">
+      <img src="img/img-11.jpeg" alt="">
     </div>
 
     <div class="test" data-hover="3">
