--- a/case-study.html
+++ b/case-study.html
@@ -74,10 +74,26 @@
   </section>
 
   <!-- carousel testing -->
-  <div class="carousel">
+  <div class="carousel" data-carousel="1" data-speed="1000">
     <span class="carousel-control-left"></span>
     <span class="carousel-control-right"></span>
-    <div class="carousel-content" id="cool-id">
+    <div class="carousel-content">
+      <!-- add extra last pic first and extra first pic last for hover effect to work properly  -->
+      <img src="img/img-5.jpeg" alt="" />
+      <img src="img/img-1.jpeg" alt="" />
+      <img src="img/img-2.jpeg" alt="" />
+      <img src="img/img-3.jpeg" alt="" />
+      <img src="img/img-4.jpeg" alt="" />
+      <img src="img/img-5.jpeg" alt="" />
+      <img src="img/img-1.jpeg" alt="" />
+    </div>
+  </div>
+
+  <!-- carousel testing -->
+  <div class="carousel" data-carousel="2" data-speed="3000">
+    <span class="carousel-control-left"></span>
+    <span class="carousel-control-right"></span>
+    <div class="carousel-content">
       <!-- add extra last pic first and extra first pic last for hover effect to work properly  -->
       <img src="img/img-5.jpeg" alt="" />
       <img src="img/img-1.jpeg" alt="" />
