added video to carousel for testing

--- a/case-study.html
+++ b/case-study.html
@@ -98,6 +98,7 @@
       <img src="img/img-5.jpeg" alt="" />
       <img src="img/img-1.jpeg" alt="" />
       <img src="img/img-2.jpeg" alt="" />
+      <video src="video/placeholder-vid-2.mp4" autoplay muted loop></video>
       <img src="img/img-3.jpeg" alt="" />
       <img src="img/img-4.jpeg" alt="" />
       <img src="img/img-5.jpeg" alt="" />
