Added optimized images for better load time

--- a/about.html
+++ b/about.html
@@ -28,23 +28,23 @@
 
   <!-- nav hover -->
   <div class="test" data-nav="1">
-    <img src="img/img-2.jpeg" alt="">
-    <img src="img/img-3.jpeg" alt="">
-    <img src="img/img-5.jpeg" alt="">
-    <img src="img/img-4.jpeg" alt="">
-    <img src="img/img-11.jpeg" alt="">
+    <img src="img/img-2.jpg" alt="">
+    <img src="img/img-3.jpg" alt="">
+    <img src="img/img-5.jpg" alt="">
+    <img src="img/img-4.jpg" alt="">
+    <img src="img/img-11.jpg" alt="">
   </div>
 
   <div class="test" data-nav="2">
-    <img src="img/img-4.jpeg" alt="">
-    <img src="img/img-5.jpeg" alt="">
-    <img src="img/img-6.jpeg" alt="">
+    <img src="img/img-4.jpg" alt="">
+    <img src="img/img-5.jpg" alt="">
+    <img src="img/img-6.jpg" alt="">
   </div>
 
   <div class="test" data-nav="3">
-    <img src="img/img-2.jpeg" alt="">
-    <img src="img/img-3.jpeg" alt="">
-    <img src="img/img-4.jpeg" alt="">
+    <img src="img/img-2.jpg" alt="">
+    <img src="img/img-3.jpg" alt="">
+    <img src="img/img-4.jpg" alt="">
   </div>
   <!-- main landing with pic -->
   <header>
