--- a/case-study.html
+++ b/case-study.html
@@ -79,13 +79,13 @@
     <span class="carousel-control-right"></span>
     <div class="carousel-content">
       <!-- add extra last pic first and extra first pic last for hover effect to work properly  -->
-      <img src="img/img-5.jpeg" alt="" />
-      <img src="img/img-1.jpeg" alt="" />
-      <img src="img/img-2.jpeg" alt="" />
-      <img src="img/img-3.jpeg" alt="" />
-      <img src="img/img-4.jpeg" alt="" />
-      <img src="img/img-5.jpeg" alt="" />
-      <img src="img/img-1.jpeg" alt="" />
+      <img src="img/img-5.jpg" alt="" />
+      <img src="img/img-1.jpg" alt="" />
+      <img src="img/img-2.jpg" alt="" />
+      <img src="img/img-3.jpg" alt="" />
+      <img src="img/img-4.jpg" alt="" />
+      <img src="img/img-5.jpg" alt="" />
+      <img src="img/img-1.jpg" alt="" />
     </div>
   </div>
 
@@ -95,20 +95,20 @@
     <span class="carousel-control-right"></span>
     <div class="carousel-content">
       <!-- add extra last pic first and extra first pic last for hover effect to work properly  -->
-      <img src="img/img-5.jpeg" alt="" />
-      <img src="img/img-1.jpeg" alt="" />
-      <img src="img/img-2.jpeg" alt="" />
+      <img src="img/img-5.jpg" alt="" />
+      <img src="img/img-1.jpg" alt="" />
+      <img src="img/img-2.jpg" alt="" />
       <video src="video/placeholder-vid-2.mp4" autoplay muted loop></video>
-      <img src="img/img-3.jpeg" alt="" />
-      <img src="img/img-4.jpeg" alt="" />
-      <img src="img/img-5.jpeg" alt="" />
-      <img src="img/img-1.jpeg" alt="" />
+      <img src="img/img-3.jpg" alt="" />
+      <img src="img/img-4.jpg" alt="" />
+      <img src="img/img-5.jpg" alt="" />
+      <img src="img/img-1.jpg" alt="" />
     </div>
   </div>
 
   <!-- nba section -->
   <section class="nba">
-    <img src="img/nba-placeholder.png" class="full-height" alt="nba" />
+    <img src="img/nba-placeholder.jpg" class="full-height" alt="nba" />
   </section>
 
   <!--  NEW HOVER CAROUSEL -->
@@ -119,14 +119,14 @@
     </div>
 
     <div class="test" data-hover="2">
-      <img src="img/img-4.jpeg" alt="">
-      <img src="img/img-5.jpeg" alt="">
+      <img src="img/img-4.jpg" alt="">
+      <img src="img/img-5.jpg" alt="">
     </div>
 
     <div class="test" data-hover="3">
-      <img src="img/img-2.jpeg" alt="">
-      <img src="img/img-3.jpeg" alt="">
-      <img src="img/img-4.jpeg" alt="">
+      <img src="img/img-2.jpg" alt="">
+      <img src="img/img-3.jpg" alt="">
+      <img src="img/img-4.jpg" alt="">
     </div>
     <div class="hover-carousel-content-video">
       <video src="" autoplay loop muted></video>
