--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
   <!-- nav hover -->
   <div class="test" data-nav="1">
-    <img src="img/img-2.jpeg" alt="">
-    <img src="img/img-3.jpeg" alt="">
-    <img src="img/img-8.jpeg" alt="">
-    <img src="img/img-5.jpeg" alt="">
+    <img src="img/img-2.jpg" alt="">
+    <img src="img/img-3.jpg" alt="">
+    <img src="img/img-8.jpg" alt="">
+    <img src="img/img-5.jpg" alt="">
   </div>
 
   <div class="test" data-nav="2">
-    <img src="img/img-4.jpeg" alt="">
-    <img src="img/img-5.jpeg" alt="">
+    <img src="img/img-4.jpg" alt="">
+    <img src="img/img-5.jpg" alt="">
   </div>
 
   <div class="test" data-nav="3">
-    <img src="img/img-2.jpeg" alt="">
-    <img src="img/img-3.jpeg" alt="">
-    <img src="img/img-4.jpeg" alt="">
+    <img src="img/img-2.jpg" alt="">
+    <img src="img/img-3.jpg" alt="">
+    <img src="img/img-4.jpg" alt="">
   </div>
 
   <!--  NEW HOVER CAROUSEL -->
@@ -51,16 +51,16 @@
     </div>
 
     <div class="test" data-hover="2">
-      <img src="img/img-4.jpeg" alt="">
-      <img src="img/img-5.jpeg" alt="">
-      <img src="img/img-8.jpeg" alt="">
-      <img src="img/img-11.jpeg" alt="">
+      <img src="img/img-4.jpg" alt="">
+      <img src="img/img-5.jpg" alt="">
+      <img src="img/img-8.jpg" alt="">
+      <img src="img/img-11.jpg" alt="">
     </div>
 
     <div class="test" data-hover="3">
-      <img src="img/img-2.jpeg" alt="">
-      <img src="img/img-3.jpeg" alt="">
-      <img src="img/img-4.jpeg" alt="">
+      <img src="img/img-2.jpg" alt="">
+      <img src="img/img-3.jpg" alt="">
+      <img src="img/img-4.jpg" alt="">
     </div>
     <div class="hover-carousel-content-video">
       <video src="" autoplay loop muted></video>
