added fullscreen gradient until page loads

--- a/case-study.html
+++ b/case-study.html
@@ -10,6 +10,12 @@
 </head>
 
 <body class="case-study">
+
+  <!-- fullscreen gradient until page loads -->
+  <div class="fullscreen-gradient">
+    <img src="spinner.svg" alt="Loading...">
+  </div>
+
   <!-- emoji menu  -->
   <img src="img/gesture-emoji.png" class="gesture-emoji emoji-open" alt="Exit" />
 
@@ -147,6 +153,13 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
+
+  <!-- fade out fullscreen gradient on page load -->
+  <script>
+    $(window).on('load', function () {
+      $('.fullscreen-gradient').fadeOut();
+    })
+  </script>
 </body>
 
 </html>
