fixed duplicated paragraphs

--- a/about.html
+++ b/about.html
@@ -60,19 +60,7 @@
       and New York, I bring a unique blend of understanding with regards to government, health, sports and
       entertainment clientele.</p>
 
-    <p>An emmy award winning visual designer with 42 dog years of experience in the digital design industry, I have an
-      unique frame of reference. I’m equipped in broadcast, print and digital experience. Based between Washington DC
-      and New York, I bring a unique blend of understanding with regards to government, health, sports and
-      entertainment clientele.</p>
-
     <p> We help forward-thinking clients succeed in digital culture.</p>
-
-    <p>An emmy award winning visual designer with 42 dog years of experience in the digital design industry, I have an
-      unique frame of reference. I’m equipped in broadcast, print and digital experience. Based between Washington DC
-      and New York, I bring a unique blend of understanding with regards to government, health, sports and
-      entertainment clientele.</p>
-
-    <p>We help forward-thinking clients succeed in digital culture.</p>
 
     <p>Hi there. Thanks for visiting. My name is Doug Seidman. I am currently the Head of Product & Design at GQ.</p>
 
@@ -153,8 +141,8 @@
   </footer>
 
   <!-- js -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
 </body>
 
