--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#" data-nav="1">Verizon</a>
       <a href="#" data-nav="2">Huge</a>
       <a href="#" data-nav="3">T-Mobile</a>
-      <a href="#">MSG Networks</a>
+      <a href="#" data-nav="4">MSG Networks</a>
       <a href="#">Pfizer</a>
       <a href="case-study.html">Tidal</a>
     </div>
@@ -43,6 +43,13 @@
     <img src="img/img-4.jpg" alt="">
   </div>
 
+  <div class="test" data-nav="4">
+    <img src="img/img-2.jpg" alt="">
+    <img src="img/img-3.jpg" alt="">
+    <img src="img/img-8.jpg" alt="">
+    <img src="img/img-5.jpg" alt="">
+  </div>
+
   <!--  NEW HOVER CAROUSEL -->
   <div class="hover-carousel-content">
     <div class="test" data-hover="1">
@@ -62,6 +69,7 @@
       <img src="img/img-3.jpg" alt="">
       <img src="img/img-4.jpg" alt="">
     </div>
+
     <div class="hover-carousel-content-video">
       <video src="" autoplay loop muted></video>
     </div>
@@ -84,8 +92,8 @@
   </div>
 
   <!-- scripts -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
 
 </body>
